src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__union_limited_lexrange_collapses.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
expression: reply
---
{
  "Type": "UNION",
  "Query type": "LEXRANGE",
  "Child iterators": "The number of iterators in the union is 1"
}
