src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__union_limited_lexrange_prints_full.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 313
expression: reply
---
{
  "Type": "UNION",
  "Query type": "LEXRANGE",
  "Child iterators": [{"Type": "EMPTY"}]
}
