src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__union_limited_non_union_type.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 271
expression: reply
---
{
  "Type": "UNION",
  "Query type": "TAG",
  "Child iterators": "The number of iterators in the union is 3"
}
