src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__union_with_query_string.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 331
expression: reply
---
{
  "Type": "UNION",
  "Query type": b"PREFIX - hello",
  "Child iterators": [{"Type": "EMPTY"}]
}
