src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__wildcard.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 84
expression: reply
---
{"Type": "WILDCARD"}
